add tabs: introduction research interest

--- a/Handy/site/how_to/index.html
+++ b/Handy/site/how_to/index.html
@@ -49,6 +49,12 @@
                             <li >
                                 <a href="..">Home</a>
                             </li>
+                            <li >
+                                <a href="../introduction/">Intorduction</a>
+                            </li>
+                            <li >
+                                <a href="../research_interest/">Research Interest</a>
+                            </li>
                             <li class="active">
                                 <a href="./">How To</a>
                             </li>
@@ -61,7 +67,7 @@
                             </a>
                         </li>
                             <li >
-                                <a rel="next" href="..">
+                                <a rel="next" href="../research_interest/">
                                     <i class="fa fa-arrow-left"></i> Previous
                                 </a>
                             </li>
@@ -86,7 +92,8 @@
                 <div class="col-md-9" role="main">
 
 <h1 id="welcome-to-mkdocs">Welcome to MkDocs</h1>
-<p>For full documentation visit <a href="https://mkdocs.org">mkdocs.org</a>.</p>
+<p>For full documentation visit <a href="https://mkdocs.org">mkdocs.org</a>.
+test <a href="..">tt</a></p>
 <h2 id="commands">Commands</h2>
 <ul>
 <li><code>mkdocs new [dir-name]</code> - Create a new project.</li>
